# MNEMON

./: .gitignore  CLAUDE.md  README.md  config.yaml  llms.txt  markets.json  package-lock.json  package.json  pyproject.toml  run_fetch.sh  run_ingest.sh  run_mnemon.sh  tsconfig.json
docs/: DEPLOY.md  FE_SURFACING_PLAN.md  SCHEMA_NOTES.md
src/: fetch-morpho.ts
src/ingest/: __init__.py  check.py  cli.py  config.py  defillama.py  discovery.py  duck.py  http.py  logging_setup.py  migrate_legacy.py  morpho_api.py  normalize.py  rpc.py  state.py  storage.py
src/ingest/jobs/: __init__.py  backfill.py  context.py  market_state.py  (+5 more)
src/mnemon/: __main__.py  check.py  cli.py  config.py  defillama.py  discovery.py  duck.py  http.py  logging_setup.py  migrate_legacy.py  morpho_api.py  normalize.py  reader.py  rpc.py  schemas.py  state.py  storage.py  views.py
systemd/: mnemon.service  mnemon.timer
tests/: conftest.py  test_bot_events.py  test_check.py  test_discovery.py  test_duck.py  test_export.py  test_heal.py  test_market_flows_job.py  test_migrate_legacy.py  test_morpho_paging.py  test_normalize.py  test_reader.py  test_state_and_config.py  test_storage.py  test_views_flows.py  test_views_v2.py
tests/fixtures/: asset_price_history.json  bot_events_sample.jsonl  llama_chart.json  llama_current.json  market_history.json  market_transactions.json  markets_live_state.json  markets_meta.json  positions_page.json  supplier_positions_page.json  vault_alloc_history.json  vault_allocations.json  vault_v2_state.json  vault_v2_transactions.json  yield_pools_sample.json
(+16 files in other folders)
