[project]
name = "morpho-daily"
version = "2.0.0"
description = "Local DeFi research database: Morpho market/vault/position/price history in Parquet, queried via DuckDB"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=17",
    "duckdb>=1.1",
    "pydantic>=2.8",
    "pyyaml>=6",
    # Used only by the RPC fallback (src/ingest/rpc.py), imported lazily.
    "web3>=7",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
